Fixed word wrapping on login message

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -227,7 +227,7 @@ a:hover {
 }
 
 .login-message {
-  white-space: pre;
+  white-space: pre-wrap;
   font-weight: bold;
 }
 
